<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FractView</string>
    <string name="menu_settings">Settings</string>
    <string name="resize">Resize</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="function">Function</string>
    <string name="maxiter">Iterations</string>
    <string name="bailout">Bailout</string>
    <string name="lake">Lake</string>
    <string name="bailoutcolors">Bailout Palette</string>
    <string name="lakecolors">Lake Palette</string>
    <string name="scale">Scale</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="transfer">Transfer</string>
    <string name="colors">Colors</string>
    <string name="bailout_label">"Bailout: "</string>
    <string name="method_label">"Method: "</string>
    <string name="epsilon_label">Epsilon</string>
    <string name="transfer_label">"Transfer: "</string>
    <string name="range_label">"Range: "</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="filename">Filename</string>
    <string name="cyclic">Cyclic</string>
    <string name="shift_left">&lt;&lt;</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="shift_right">>></string>
    <string name="normalize_range">Normalize Range</string>
    <string name="add_bookmark">Bookmark</string>
    <string name="from_bookmark">Open bookmarks</string>
    <string name="value_label">Value</string>
    <string name="saturation_label">Saturation</string>
    <string name="hue_label">Hue</string>
    <string name="select_type">Select Type</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_textfile">Create Textfile with description</string>
    <string name="custom_range">Custom Range</string>
    <string name="set_wallpaper">Set Wallpaper</string>

</resources>