<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/save">
    </item>
    <item
        android:id="@+id/add_bookmark"
        android:icon="@android:drawable/star_big_off"
        android:showAsAction="always"
        android:title="@string/add_bookmark">
    </item>
    <item 
        android:id="@+id/from_bookmark"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="always" 
        android:title="@string/from_bookmark">
    </item>
    <item
        android:id="@+id/function"
        android:showAsAction="ifRoom|withText"
        android:title="@string/function">
    </item>
    <item android:id="@+id/scale" android:title="@string/scale">
    </item><item
        android:id="@+id/maxiter"
        android:showAsAction="ifRoom|withText"
        android:title="@string/maxiter">
    </item>
    <item
        android:id="@+id/transfer"
        android:showAsAction="ifRoom|withText"
        android:title="@string/transfer">
        <menu>
            <item
                android:id="@+id/bailout"
                android:title="@string/bailout">
            </item>
            <item
                android:id="@+id/lake"
                android:title="@string/lake">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/colors"
        android:showAsAction="ifRoom|withText"
        android:title="@string/colors">
        <menu>
            <item
                android:id="@+id/bailoutcolors"
                android:title="@string/bailoutcolors">
            </item>
            <item
                android:id="@+id/lakecolors"
                android:title="@string/lakecolors">
            </item>
        </menu>
    </item>
    
    
    <item
        android:id="@+id/resize"
        android:title="@string/resize">
    </item>

</menu>