<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/scale"
        android:title="@string/scale">
    </item>
    
    <item
        android:id="@+id/function"
        android:showAsAction="ifRoom|withText"
        android:title="@string/function">
    </item>
    <item
        android:id="@+id/transfer"
        android:showAsAction="ifRoom|withText"
        android:title="@string/transfer">

        <menu>
            <item
                android:id="@+id/bailout"
                android:title="@string/bailout">
            </item>
            <item
                android:id="@+id/lake"
                android:title="@string/lake">
            </item>
        </menu>
    </item><item android:id="@+id/colors" android:title="@string/colors" android:showAsAction="ifRoom|withText">
        <menu>
            <item android:id="@+id/bailoutcolors" android:title="@string/bailoutcolors">
            </item>
            <item android:id="@+id/lakecolors" android:title="@string/lakecolors">
            </item>
        </menu>
    </item>
    <item android:id="@+id/maxiter" android:title="@string/maxiter" android:showAsAction="ifRoom|withText">
    </item>

</menu>